--- a/views/add-product.html
+++ b/views/add-product.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Add Product</title>
-    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
   </head>
   <body>
     <header class="main-header">
@@ -24,7 +26,7 @@
       <form class="product-form" action="/admin/add-product" method="POST">
         <div class="form-control">
           <label for="title">Title</label>
-          <input class="text-input" name="title" type="text" id="title"/>
+          <input name="title" type="text" id="title"/>
         </div>
         
         <button type="submit">Add Product</button>
