--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,6 +60,7 @@ main {
 
 .card {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin-bottom: 20px;
 }
 
 .card__header,
@@ -80,6 +81,8 @@ main {
 
 .card__image img {
   width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .card__actions {
