--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -11,8 +11,21 @@
                     <label for="title">Title</label>
                     <input name="title" type="text" id="title"/>
                 </div>
+                <div class="form-control">
+                    <label for="imageUrl">Image Url</label>
+                    <input name="imageUrl" type="text" id="imageUrl"/>
+                </div>
+                <div class="form-control">
+                    <label for="price">Price</label>
+                    <input name="price" type="number" id="price" step="0.01"/>
+                </div>
+                <div class="form-control">
+                    <label for="description">Description</label>
+                    <textarea name="description" id="description" rows="5">
+                    </textarea>
+                </div>
 
-                <button type="submit">Add Product</button>
+                <button class="btn" type="submit">Add Product</button>
             </form>
         </main>
 <%- include('../includes/end.ejs') %>
