--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,8 +1,8 @@
 <%- include('includes/head.ejs') %>
 </head>
+
 <body>
     <%- include('includes/navigation.ejs') %>
-    <main>
-        <h1>404 Page not found</h1>
-    </main>
+    <h1>Page Not Found!</h1>
+
 <%- include('includes/end.ejs') %>
