--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,22 +1,21 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
+
 <body>
     <%- include('../includes/navigation.ejs') %>
 
     <main>
         <% if (prods.length > 0) { %>
             <div class="grid">
-                <% for (product of prods) { %>
+                <% for (let product of prods) { %>
                     <article class="card product-item">
                         <header class="card__header">
-                            <h1 class="product__title">
-                                <%= product.title %>
-                            </h1>
+                            <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
                             <img src="<%= product.imageUrl %>"
-                                 alt="A Book">
+                                alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
@@ -29,7 +28,7 @@
                 <% } %>
             </div>
         <% } else { %>
-            <h1>No products found</h1>
+            <h1>No Products Found!</h1>
         <% } %>
     </main>
 <%- include('../includes/end.ejs') %>
