--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,6 +1,24 @@
 <%- include('../includes/head.ejs') %>
-    </head>
+</head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
-        <%- include('../includes/end.ejs') %>
+<body>
+    <%- include('../includes/navigation.ejs') %>
+
+    <main>
+        <%if (products.length > 0) {%>
+            <ul>
+                <%products.forEach(p => {%>
+                    <li>
+                        <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                        <form action="/cart-delete-item" method="post">
+                            <input type="hidden" name="productId" value="<%= p.productData.id %>"/>
+                            <button class="btn" type="submint">Delete item</button>
+                        </form>
+                    </li>
+                <% })%>
+            </ul>
+        <%} else {%>
+            <h1>No products in Cart</h1>
+        <%}%>
+    </main>
+<%- include('../includes/end.ejs') %>
