--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,25 +1,16 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/product.css">
-</head>
+    </head>
 
-<body>
-    <%- include('../includes/navigation.ejs') %>
-
-    <main class="centered">
-        <h1><%= product.title %></h1>
-        <hr/>
-        <div>
-            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-        </div>
-
-        <div class="card__content">
-            <h2 class="product__price">$
-                <%= product.price %>
-            </h2>
-            <p class="product__description">
-                <%= product.description %>
-            </p>
-        </div>
-        <%- include('../includes/add-to-card.ejs') %>
-    </main>
-<%- include('../includes/end.ejs') %>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main class="centered">
+            <h1><%= product.title %></h1>
+            <hr>
+            <div>
+                <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+            </div>
+            <h2><%= product.price %></h2>
+            <p><%= product.description %></p>
+            <%- include('../includes/add-to-cart.ejs') %>
+        </main>
+        <%- include('../includes/end.ejs') %>
