--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -9,12 +9,12 @@
             <%} else {%>
                 <%orders.forEach(order => {%>
                 <li>
-                    <h1># <%=order.id%></h1>
+                    <h1># <%=order._id%></h1>
                     <ul>
-                        <% order.products.forEach(product => { %>
+                        <% order.items.forEach(product => { %>
                         <li>
                             <%= product.title%>
-                            (<%= product.orderItem.quantity%>)
+                            (<%= product.quantity%>)
                         </li>
                         <% }); %>
                     </ul>
