--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -27,7 +27,7 @@
             <% if (editing) { %>
                 <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
-
+            <input name="_csrf" value="<%= csrfToken %>" type="hidden"/>
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
         </form>
     </main>
