--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -6,8 +6,14 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
 
+    <% if (errorMessage) { %>
+        <div class="user-message user-message--error">
+            <%= errorMessage %>
+        </div>
+    <% } %>
+
     <main>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
@@ -20,7 +26,8 @@
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
-            <button class="btn" type="submit">Login</button>
+            <input name="_csrf" value="<%= csrfToken %>" type="hidden"/>
+            <button class="btn" type="submit">Sighup</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
