--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/cart" method="post">
+    <input name="_csrf" value="<%= csrfToken %>" type="hidden"/>
     <button class="btn" type="submit">Add to Cart</button>
     <input type="hidden" name="productId" value="<%= product._id %>">
 </form>
